Reworked GPP again.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -86,7 +86,7 @@ All old issues (along the with their comments and labels) have been migrated to 
 The PSL 2.2.0 release comes with two new interfaces, and deprecates one.
 
 ### New Python Interface
-[*a38cffe5*](https://github.com/linqs/psl/commit/a38cffe5866f070f7db9665b5fa94f4f9d957a44)
+[*Commit: a38cffe5*](https://github.com/linqs/psl/commit/a38cffe5866f070f7db9665b5fa94f4f9d957a44)
 
 PSL 2.2.0 comes with the first official release of the PSL Python interface.
 This package is called `pslpython` and is [available on PyPi](https://pypi.org/project/pslpython).
@@ -153,7 +153,7 @@ python -m pslpython.cli --model test.psl --data test.data --eval DiscreteEvaluat
 ```
 
 ### New Java Interface
-[*7e305dfe*](https://github.com/linqs/psl/commit/7e305dfea1a0e092b43ece80f4e44f71777ee330)
+[*Commit: 7e305dfe*](https://github.com/linqs/psl/commit/7e305dfea1a0e092b43ece80f4e44f71777ee330)
 
 PSL 2.2.0 comes with a new Java interface.
 This interface works much like the Groovy interface with some slight differences.
@@ -179,7 +179,7 @@ Inserter inserter = dataStore.getInserter(model.getStandardPredicate("Foo"), obs
 ```
 
 ### Groovy Interface Deprecated
-[*476dfd1e*](https://github.com/linqs/psl/commit/476dfd1e745919dc5a2cef4ac521806eb252cac1)
+[*Commit: 476dfd1e*](https://github.com/linqs/psl/commit/476dfd1e745919dc5a2cef4ac521806eb252cac1)
 
 With the addition of the [new Java interface](#new-java-interface), the Groovy interface has officially been deprecated.
 It will be removed from the next release of PSL.
@@ -188,7 +188,7 @@ Dropping support for Groovy will allow us to support a wider range of Java versi
 ## CLI Improvements
 
 ### Functional Predicates
-[*ac2f9a30*](https://github.com/linqs/psl/commit/ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d)
+[*Commit: ac2f9a30*](https://github.com/linqs/psl/commit/ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d)    
 [Functional predicates](https://psl.linqs.org/wiki/master/External-Functions.html) are now supported in the CLI.
 To use these, a function key needs to be specified in the predicate definition, e.g:
 ```yaml:
@@ -206,7 +206,7 @@ This can then be used in a rule like:
 ```
 
 ### Multiple Evaluators
-[*d63a8f7e*](https://github.com/linqs/psl/commit/d63a8f7ee1c9bfb881bb53770e3e84db34c2668b)
+[*Commit: d63a8f7e*](https://github.com/linqs/psl/commit/d63a8f7ee1c9bfb881bb53770e3e84db34c2668b)
 
 The CLI can now use multiple evaluators in one run.
 This can be done by passing by multiple evaluators to the `--eval` argument:
@@ -215,8 +215,8 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator Con
 ```
 
 ### Output Ground Rules
-[*62fbd2cc*](https://github.com/linqs/psl/commit/62fbd2cc20c8360c365a02be2cdc4f871a4f5798)
-[*b901e937*](https://github.com/linqs/psl/commit/b901e937ed2869b5dcc184585ea29c5fa77b1170)
+*Commits: [62fbd2cc](https://github.com/linqs/psl/commit/62fbd2cc20c8360c365a02be2cdc4f871a4f5798) |
+[b901e937](https://github.com/linqs/psl/commit/b901e937ed2869b5dcc184585ea29c5fa77b1170)*
 
 The CLI accepts two new arguments that can be used to see the ground rules being processed.
 `-gr`/`--groundrules` can be used to output the ground rules **before** inference is run.
@@ -232,14 +232,14 @@ Either option can be specified without arguments, and the results will be output
 You can also specify an optional path with either argument and the results will be output there.
 
 ### Skip Database Commit
-[*3ced4b20*](https://github.com/linqs/psl/commit/3ced4b20be80fc17403663fe16e194bcfcaf6a3a)
+[*Commit: 3ced4b20*](https://github.com/linqs/psl/commit/3ced4b20be80fc17403663fe16e194bcfcaf6a3a)
 
 If you do not need the results of inference saved into the database,
 then you can save time by skipping the writing of results to the database using the `--skipCommitAtoms` argument.
 
 
 ### Remove Extra Quoting
-[*cbe7fd8a*](https://github.com/linqs/psl/commit/cbe7fd8a3c8e5dc9a296836f5574e98353328323)
+[*Commit: cbe7fd8a*](https://github.com/linqs/psl/commit/cbe7fd8a3c8e5dc9a296836f5574e98353328323)
 
 Constants are no longer quoted in inferred predicate output produced by the CLI.
 This may break existing scripts that parse this output,
@@ -266,14 +266,14 @@ Both in terms of allocations and total persisted memory.
 TODO(eriq): Get some stats
 
 ### Smaller Types
-[*9a34ce23*](https://github.com/linqs/psl/commit/9a34ce235b65cd549c28b9b64cbc94a496d1350c)
+[*Commit: 9a34ce23*](https://github.com/linqs/psl/commit/9a34ce235b65cd549c28b9b64cbc94a496d1350c)
 
 Where possible, standard types have been replaced by their shorter sibling
 (`int` replaced with `short`, `double` replaced with `float`, etc).
 This allows us to trade unused precision for memory and speed (depending on the system architecture).
 
 ### Matrix Operations
-[*8f034fa8*](https://github.com/linqs/psl/commit/8f034fa8315d3f6461cd38435612d889c745f4a2)
+[*Commit: 8f034fa8*](https://github.com/linqs/psl/commit/8f034fa8315d3f6461cd38435612d889c745f4a2)
 
 Added a class [`FloatMatrix`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/util/FloatMatrix.html)
 to handle low-level matrix operations.
@@ -281,13 +281,13 @@ This classes uses the [Netlib library](https://www.netlib.org/) to call into the
 This allows us to easily perform efficient matrix operations.
 
 ### Streaming Grounding Results
-[*8f4de846*](https://github.com/linqs/psl/commit/8f4de8464b79ace097ad577dff0bcbfa63369b3e)
+[*Commit: 8f4de846*](https://github.com/linqs/psl/commit/8f4de8464b79ace097ad577dff0bcbfa63369b3e)
 
 Grounding results can now be streamed from the database using the [`QueryResultIterable`](https://psl.linqs.org/api/develop/org/linqs/psl/database/QueryResultIterable.html) class.
 This allows the user to iterate through the grounding results without needing to keep them all in memory at the same time.
 
 ### Runtime Statistics
-[*df58a390*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
+[*Commit: df58a390*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
 
 A new class [RuntimeStats](https://psl.linqs.org/api/develop/org/linqs/psl/util/RuntimeStats.html)
 has been introduced to keep track of JVM statistics throughout the lifetime of a PSL program.
@@ -319,7 +319,7 @@ eriq@MrMime:~/code/psl-examples/simple-acquaintances/cli$
 ## Miscellanea
 
 ### Simple Class Names
-[*00b60321*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
+[*Commit: 00b60321*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
 
 In any case where a classname is used as a configuration option or argument,
 you can now specify the classes shortname instead of its fully-qualified name.
@@ -334,19 +334,20 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
 
 ### New Weight Learning Method: GPP
 
-With the release of PSL 2.2.0, we are now adding support for a new weight learning algorithm called Gaussian Process Prior (GPP) which is based on bayesian optimization.
-GPP works by approximating a user defined metric function and evaluating the PSL model on a number of strategically chosen weights. It returns the set of weights that maximize this approximation. For further details about GPP please see: [BOWL Bayesian Optimization for Weight Learning in Probabilistic Soft Logic](https://linqs.soe.ucsc.edu/node/355)
+With the release of PSL 2.2.0, we are now adding a new weight learning algorithm called Gaussian Process Prior (GPP), which is based on bayesian optimization.
 
-For example, to use GPP in the PSL CLI, the class name `GaussianProcessPrior` should be passed to the `--learn` argument and the metric function to optmize should be passed to the `weightlearning.evaluator` configuration option.
+GPP is a search based method that works by approximating a user defined metric and evaluating the PSL model on a number of strategically chosen weights. Although GPP tends to work better with a smooth metric, it works for any chosen metric depending on the problem being solved. The major benefit of this is that the metric being optimized can be the same as that on which the results are being evaluated. GPP returns the set of weights that maximize this metric. For further details about GPP please see: [BOWL Bayesian Optimization for Weight Learning in Probabilistic Soft Logic](https://linqs.soe.ucsc.edu/node/355).
 
-E.g.:
+The class name [`GaussianProcessPrior`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/application/learning/weight/bayesian/GaussianProcessPrior.html) should be used to use GPP in PSL.
+
+For example, to use GPP in the CLI:
 ```
 ./run.sh --learn GaussianProcessPrior -D weightlearning.evaluator=ContinuousEvaluator
 ```
 
 GPP has three main hyperparameters that can be tuned for better results:
 * `-D weightlearning.evaluator=ContinuousEvaluator`    
-This parameter specifies the user defined metric function that GPP uses to evaluate and optimize weights. The evaluator used depends on the task at hand. For example, to classify documents in one of several categories ([citation categories](https://github.com/linqs/psl-examples/tree/master/citation-categories)) a `CategoricalEvaluator` may be used.
+This parameter specifies the user defined metric function that GPP uses to evaluate and optimize weights. The evaluator used depends on the task at hand. For example, to predict the level of trust between individuals ([trust prediction](https://github.com/linqs/psl-examples/tree/master/trust-prediction)) a `RankingEvaluator` may be used.
 
 * `-D gpp.maxiterations=25`    
 This sets the maximum number of times that BOWL will conduct evaluations before choosing the best set of weights. 
@@ -363,12 +364,12 @@ This parameter determines how the weights will be chosen for evaluation.
 A lower value implies that the weights chosen for evaluation will be clustered around one region whereas a higher value will lead to exploration of weights that are as distinct as possible.
 
 ### Made Data Loading Errors More Clear
-[*1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
+[*Commit: 1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
 
 File paths were added to several data loading errors in hopes of making them more clear.
 
 ### Removed Date ConstantType
-[*df5e1b64*](https://github.com/linqs/psl/commit/df5e1b641d5274dd590bc2a917259a9e38bed464)
+[*Commit: df5e1b64*](https://github.com/linqs/psl/commit/df5e1b641d5274dd590bc2a917259a9e38bed464)
 
 The `ConstantType.Date` type have been removed as predicate argument type.
 Instead, users should use `ConstantType.String` with the date represented as a string (we suggest [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601)),
