A pass on the GPP section of the 2.2.0 changelog.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -334,34 +334,52 @@ java -jar psl.jar --model test.psl --data test.data --eval DiscreteEvaluator
 
 ### New Weight Learning Method: GPP
 
-With the release of PSL 2.2.0, we are now adding a new weight learning algorithm called Gaussian Process Prior (GPP), which is based on bayesian optimization.
+With the release of PSL 2.2.0, we are adding a new weight learning method called Gaussian Process Prior (GPP), which is based on Bayesian optimization.
 
-GPP is a search based method that works by approximating a user defined metric and evaluating the PSL model on a number of strategically chosen weights. Although GPP tends to work better with a smooth metric, it works for any chosen metric depending on the problem being solved. The major benefit of this is that the metric being optimized can be the same as that on which the results are being evaluated. GPP returns the set of weights that maximize this metric. For further details about GPP please see: [BOWL Bayesian Optimization for Weight Learning in Probabilistic Soft Logic](https://linqs.soe.ucsc.edu/node/355).
+GPP is a search-based weight learning method that works by approximating a user defined metric and evaluating the PSL model on a number of strategically chosen weights.
+Although GPP tends to work better with a smoother metric, it can work well with any metric.
+The best metric to use depends on the specific problem being modeled.
+A major benefit of GPP, and all search-based methods, is that the metric being optimized can be the same as the metric that results are evaluated on.
+In contrast, likelihood-based methods (e.g. [Maximum Likelihood MPE](https://psl.linqs.org/api/2.2.0/org/linqs/psl/application/learning/weight/maxlikelihood/MaxLikelihoodMPE.html)) maximize the likelihood,
+which may not be strongly correlated with the desired evaluation metrics.
+For further details about GPP, please see the paper: [BOWL Bayesian Optimization for Weight Learning in Probabilistic Soft Logic](https://linqs.soe.ucsc.edu/node/355).
 
-The class name [`GaussianProcessPrior`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/application/learning/weight/bayesian/GaussianProcessPrior.html) should be used to use GPP in PSL.
+To use GPP in PSL, you need to choose the right weight learning class and an evaluator that GPP will use to evaluate weight configurations.
+The class for GPP is [`org.linqs.psl.application.learning.weight.bayesian.GaussianProcessPrior`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/application/learning/weight/bayesian/GaussianProcessPrior.html).
+You can choose an evaulator by setting the `weightlearning.evaluator` configuration option to any [Evaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/Evaluator.html).
 
-For example, to use GPP in the CLI:
+For example, you can use the following command to use GPP in the CLI:
 ```
-./run.sh --learn GaussianProcessPrior -D weightlearning.evaluator=ContinuousEvaluator
+./run.sh --learn GaussianProcessPrior -D weightlearning.evaluator=DiscreteEvaluator
 ```
 
-GPP has three main hyperparameters that can be tuned for better results:
-* `-D weightlearning.evaluator=ContinuousEvaluator`    
-This parameter specifies the user defined metric function that GPP uses to evaluate and optimize weights. The evaluator used depends on the task at hand. For example, to predict the level of trust between individuals ([trust prediction](https://github.com/linqs/psl-examples/tree/master/trust-prediction)) a `RankingEvaluator` may be used.
+GPP has four main configuration options that can be tuned for better results:
+* `weightlearning.evaluator`  
+Domain: Any [Evaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/Evaluator.html)  
+Default: [ContinuousEvaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/ContinuousEvaluator.html)  
+The user defined metric function that GPP uses to evaluate and optimize weights.
+The best evaluator to use depends on your specific problem.
 
-* `-D gpp.maxiterations=25`    
-This sets the maximum number of times that BOWL will conduct evaluations before choosing the best set of weights. 
-NOTE: A value of 100 should be reasonable. Keep in mind that the time taken to perform full learning in BOWL grows quadratically with the number of iterations. Therefore, if you choose a large number (such as 500), learning might take days to finish.
+* `gpp.maxiterations`  
+Domain: Integer in (0, ∞)  
+Default: 25  
+The maximum number of times that BOWL will conduct evaluations before choosing the best set of weights.
+100 iterations is typically enough for even difficult domains.
+Keep in mind that the time taken to perform full learning in BOWL grows quadratically with the number of iterations.
+Therefore, if you choose a large number (such as 500), learning might take days to finish.
 
-* `-D gppker.reldep=1.0`    
-This is the relative dependence value given in GPP. 
-The exploration space increases as the number of rules in the model increase.
-A smaller value would imply that weights are very distinct and related, hence requiring lesser number of iterations. 
-The value should be a positive floating point number.
-
-* `-D gpp.explore=2.0`    
-This parameter determines how the weights will be chosen for evaluation.
+* `gpp.explore`  
+Domain: Float in (0.0, ∞)  
+Default: 2.0  
+This determines how the weights will be chosen for evaluation.
 A lower value implies that the weights chosen for evaluation will be clustered around one region whereas a higher value will lead to exploration of weights that are as distinct as possible.
+
+* `gppker.reldep`  
+Domain: Float in (0.0, ∞)  
+Default: 1.0  
+The relative dependence value given in GPP.
+The exploration space increases as the number of rules in the model increase.
+A smaller value would imply that weights are very distinct and related, hence requiring fewer iterations.
 
 ### Made Data Loading Errors More Clear
 Commit: [*1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
