Updated the memory usage section of the 2.2.0 changelog.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -35,7 +35,7 @@ while the `develop` branch stays up-to-date with our development work.
    - [run.sh Takes Arguments](#run.sh-takes-arguments)
 
  - [Performance](#performance)
-   - [Reduced Memory Allocations](#reduced-memory-allocations)
+   - [Reduced Memory](#reduced-memory)
    - [Smaller Types](#smaller-types)
    - [Matrix Operations](#matrix-operations)
    - [Streaming Grounding Results](#streaming-grounding-results)
@@ -258,12 +258,15 @@ For a list of supported arguments you can use `--help`. Additionally, for a list
 
 ## Performance
 
-### Reduced Memory Allocations
+### Reduced Memory
 
 A lot of effort was put into reducing the memory burden of PSL for the 2.2.0 release.
 Both in terms of allocations and total persisted memory.
+We have observed the total memory consumption in PSL drop between 17.5% and 45.7% (depending on the exact model and data).
+Below you can see an example of the same model and data in PSL 2.1.0 (left) vs PSL 2.2.0 (right).
+The blue portion of the graph is the actual memory being used.
 
-TODO(eriq): Get some stats
+![]({{ "/assets/images/2.2.0/psl-memory-improvements-2.2.0-opt.png" | relative_url }}){: .center-image }
 
 ### Smaller Types
 Commit: [*9a34ce23*](https://github.com/linqs/psl/commit/9a34ce235b65cd549c28b9b64cbc94a496d1350c)
