Made a content pass on the 2.2.0 changelog.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -8,8 +8,7 @@ tags: [release, v2.2.0]
 
 We are happy to announce the release of PSL version `2.2.0`!
 We have made great improvements to PSL in the areas of usability and performance.
-
-Here you will find a list of the major changes in `2.2.0` as well as information on migrating from `2.1.0`.
+In this changelog, you will find a list of the major changes in `2.2.0` as well as information on migrating from `2.1.0`.
 
 For those of you that learn better by example, check out the [PSL examples repository](https://github.com/linqs/psl-examples).
 The `master` branch is always compatible with the most resent stable release,
@@ -18,6 +17,7 @@ while the `develop` branch stays up-to-date with our development work.
  - [Infrastructure](#infrastructure)
    - [Artifacts Moved to Maven Central](#artifacts-moved-to-maven-central)
    - [Wiki Hosted on psl.linqs.org](#wiki-hosted-on-psl.linqs.org)
+   - [API Reference Hosted on psl.linqs.org](#api-reference-hosted-on-psl.linqs.org)
    - [Development Repo Now linqs/psl](#development-repo-now-linqs/psl)
    - [Issues Moved to linqs/psl](#issues-moved-to-linqs/psl)
 
@@ -42,34 +42,34 @@ while the `develop` branch stays up-to-date with our development work.
    - [Runtime Statistics](#runtime-statistics)
 
  - [Miscellanea](#miscellanea)
-    - [Simple Class Names](#simple-class-names)
+   - [Simple Class Names](#simple-class-names)
    - [New Weight Learning Method: GPP](#new-weight-learning-method-gpp)
    - [Made Data Loading Errors More Clear](#made-data-loading-errors-more-clear)
    - [Removed Date ConstantType](#removed-date-constanttype)
 
 ---
 
-## Infrastructure
+## **Infrastructure**
 The 2.2.0 release comes with a few changes to the PSL development cycle and artifact deployment.
 
 ### Artifacts Moved to Maven Central
 Starting with this release, PSL releases and artifacts will now be hosted through [Maven Central](https://mvnrepository.com/repos/central).
 Maven Central is the default remote repository for Maven.
 With PSL deployed there, there is no longer a need to use the old Maven repository at:
-`http://maven.linqs.org/maven/repositories/psl-releases/`.
+<http://maven.linqs.org/maven/repositories/psl-releases/>.
 Old builds will continue to be hosted at the old repository for the foreseeable future.
-To find the new builds you can either search directly for `PSL` or for the group ID - `org.linqs` on Maven Central. The latest development versions are labeled as `CANARY` releases.
+To find the new builds you can go to the [org.linqs](https://mvnrepository.com/artifact/org.linqs) group on Maven Central.
+The development versions are labeled as `CANARY` releases.
 
 ### Wiki Hosted on psl.linqs.org
-The PSL Wiki (https://github.com/linqs/psl/wiki)
-and PSL Development Wiki (https://github.com/eriq-augustine/psl/wiki)
-have been moved to this site at [psl.linqs.org/wiki](https://psl.linqs.org/wiki/).
+The PSL Wiki <https://github.com/linqs/psl/wiki>
+and PSL Development Wiki <https://github.com/eriq-augustine/psl/wiki>
+have been moved to [psl.linqs.org/wiki](https://psl.linqs.org/wiki/).
 All stable and development releases going forward will have a version of the wiki available as either
-live webpages (for newer releases) or downloadable archives (for older releases). NOTE: Internal LINQS members can edit the Wiki pages by clicking the `Edit this Page` button at the bottom.
-
+live webpages (for newer releases) or downloadable archives (for older releases).
 
 ### API Reference Hosted on psl.linqs.org
-Along with the Wiki, the API reference will now also be hosted on this site at [psl.linqs.org/api](https://psl.linqs.org/api/).
+Along with the Wiki, the API reference will now also be hosted at [psl.linqs.org/api](https://psl.linqs.org/api/).
 All stable and development releases going forward will have a version of the API reference available as either
 live webpages (for newer releases) or downloadable archives (for older releases).
 
@@ -82,19 +82,19 @@ Any new pull requests should be submitted there.
 Along with pull requests, issues have been moved to the canonical PSL repository: [linqs/psl/issues](https://github.com/linqs/psl/issues).
 All old issues (along the with their comments and labels) have been migrated to this repository and any new issues should be submitted there.
 
-## PSL Interfaces
-The PSL 2.2.0 release comes with two new interfaces, and deprecates one.
+## **PSL Interfaces**
+The PSL 2.2.0 release comes with two new interfaces, and one deprecation.
 
 ### New Python Interface
 Commit: [*a38cffe5*](https://github.com/linqs/psl/commit/a38cffe5866f070f7db9665b5fa94f4f9d957a44)
 
 PSL 2.2.0 comes with the first official release of the PSL Python interface.
 This package is called `pslpython` and is [available on PyPi](https://pypi.org/project/pslpython).
-Therefore is can be installed via pip:
+Therefore, it can be installed via pip:
 ```
 pip install pslpython
 ```
-The source of the interface is available in the [main PSL repository](https://github.com/linqs/psl/tree/master/psl-python).
+The source for the interface is available in the [main PSL repository](https://github.com/linqs/psl/tree/2.2.0/psl-python).
 
 Fully implemented examples can be found in the [psl-examples repository](https://github.com/linqs/psl-examples).
 Below is a simplified example of the Python interface:
@@ -108,14 +108,14 @@ Below is a simplified example of the Python interface:
 
     model = Model('sample-model')
 
-    # Add Predicates
+    # Add predicates.
     predicate = Predicate('Foo', closed = True, size = 2)
     model.add_predicate(predicate)
 
     predicate = Predicate('Bar', closed = False, size = 2)
     model.add_predicate(predicate)
 
-    # Add Rules
+    # Add rules.
     model.add_rule(Rule('0.20: Foo(A, B) -> Bar(A, B) ^2'))
     model.add_rule(Rule('0.01: !Bar(A, B) ^2'))
 
@@ -126,7 +126,7 @@ Below is a simplified example of the Python interface:
     path = os.path.join('data', 'bar_targets.txt')
     model.get_predicate('Bar').add_data_file(Partition.TARGETS, path)
 
-    # Inference
+    # Run inference.
     results = model.infer()
 
     # Write out results.
@@ -149,7 +149,7 @@ python -m pslpython.cli --model test.psl --data test.data
 
 Additionally, any arguments supported by the CLI interface can be passed to `pslpython.cli` as well:
 ```sh
-python -m pslpython.cli --model test.psl --data test.data --eval DiscreteEvaluator -D log4j.threshold=DEBUG
+python -m pslpython.cli --model test.psl --data test.data --postgres myDB -D log4j.threshold=DEBUG
 ```
 
 ### New Java Interface
@@ -160,7 +160,7 @@ This interface works much like the Groovy interface with some slight differences
 Fully implemented examples of the Java interface can be found in the [psl-examples repository](https://github.com/linqs/psl-examples).
 
 Instead of using `org.linqs.psl.groovy.PSLModel`, `org.linqs.psl.java.PSLModel` is used.
-The methods for the `PSL` model class are now explicitly named, instead of all called `add`.
+The methods for the PSLModel class are now explicitly named, instead of being overloads of the same `add()` method.
 For example, instead of `model.add predicate: "Foo", ...`, you will use `model.addPredicate("Foo", ...)`.
 The full API for the PSLModel class can be found [here](https://psl.linqs.org/api/2.2.0/org/linqs/psl/java/PSLModel.html).
 
@@ -185,12 +185,13 @@ With the addition of the [new Java interface](#new-java-interface), the Groovy i
 It will be removed from the next release of PSL.
 Dropping support for Groovy will allow us to support a wider range of Java versions (instead of just 7 and 8).
 
-## CLI Improvements
+## **CLI Improvements**
 
 ### Functional Predicates
-Commit: [*ac2f9a30*](https://github.com/linqs/psl/commit/ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d)    
-[Functional predicates](https://psl.linqs.org/wiki/master/External-Functions.html) are now supported in the CLI.
-To use these, a function key needs to be specified in the predicate definition, e.g:
+Commit: [*ac2f9a30*](https://github.com/linqs/psl/commit/ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d)  
+
+[Functional predicates](https://psl.linqs.org/wiki/2.2.0/External-Functions.html) are now supported in the CLI.
+To use these, a `function` key needs to be specified in the predicate definition, e.g:
 ```yaml:
   Knows/2: open
   Likes/2: closed
@@ -200,9 +201,9 @@ To use these, a function key needs to be specified in the predicate definition, 
 ```
 
 In this case, the functional predicate is `SimName` and it is implemented by the `SimNameExternalFunction` class.
-This can then be used in a rule like:
+`SimName` can then be used in a rule like:
 ```
-1: SimName(P1, P2) & Lived(P1, L) & Lived(P2, L) & (P1 != P2) -> Knows(P1, P2) ^2
+1.0: SimName(P1, P2) & Lived(P1, L) & Lived(P2, L) & (P1 != P2) -> Knows(P1, P2) ^2
 ```
 
 ### Multiple Evaluators
@@ -235,13 +236,12 @@ You can also specify an optional path with either argument and the results will 
 Commit: [*3ced4b20*](https://github.com/linqs/psl/commit/3ced4b20be80fc17403663fe16e194bcfcaf6a3a)
 
 If you do not need the results of inference saved into the database,
-then you can save time by skipping the writing of results to the database using the `--skipCommitAtoms` argument.
-
+then you can save time by skipping the writing of results to the database using the `--skipAtomCommit` argument.
 
 ### Remove Extra Quoting
 Commit: [*cbe7fd8a*](https://github.com/linqs/psl/commit/cbe7fd8a3c8e5dc9a296836f5574e98353328323)
 
-Constants are no longer quoted in inferred predicate output produced by the CLI.
+Constants are no longer quoted in the inferred predicate output produced by the CLI.
 This may break existing scripts that parse this output,
 but now files output by the CLI will match the format consumed by the CLI (by default).
 
@@ -254,9 +254,7 @@ For example:
 ./run.sh -D log4j.threshold=DEBUG --postgres psl
 ```
 
-For a list of supported arguments you can use `--help`. Additionally, for a list of supported configuration options you can refer to the page titled `Configuration Options` in the wiki. 
-
-## Performance
+## **Performance**
 
 ### Reduced Memory
 
@@ -278,9 +276,8 @@ This allows us to trade unused precision for memory and speed (depending on the 
 ### Matrix Operations
 Commit: [*8f034fa8*](https://github.com/linqs/psl/commit/8f034fa8315d3f6461cd38435612d889c745f4a2)
 
-Added a class [`FloatMatrix`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/util/FloatMatrix.html)
-to handle low-level matrix operations.
-This classes uses the [Netlib library](https://www.netlib.org/) to call into the low-level BLAS and LAPACK libraries.
+We have added the [`FloatMatrix`](https://psl.linqs.org/api/2.2.0/org/linqs/psl/util/FloatMatrix.html) class to handle low-level matrix operations.
+This classes uses the [Netlib library](https://www.netlib.org/) to call into the low-level [BLAS](https://en.wikipedia.org/wiki/Basic_Linear_Algebra_Subprograms) and [LAPACK](https://en.wikipedia.org/wiki/LAPACK) libraries.
 This allows us to easily perform efficient matrix operations.
 
 ### Streaming Grounding Results
@@ -292,7 +289,7 @@ This allows the user to iterate through the grounding results without needing to
 ### Runtime Statistics
 Commit: [*df58a390*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
 
-A new class [RuntimeStats](https://psl.linqs.org/api/develop/org/linqs/psl/util/RuntimeStats.html)
+A new class, [RuntimeStats](https://psl.linqs.org/api/develop/org/linqs/psl/util/RuntimeStats.html),
 has been introduced to keep track of JVM statistics throughout the lifetime of a PSL program.
 Setting the configuration option `runtimestats.collect` to `true` will enable the statistics collection.
 These collected stats are currently output to the `INFO` log level when the JVM terminates.
@@ -302,7 +299,7 @@ In addition, the user can call the static `logDiskRead` and `logDiskWrite` metho
 
 Using the statistics looks like:
 ```
-eriq@MrMime:~/code/psl-examples/simple-acquaintances/cli$ ./run.sh -D runtimestats.collect=true
+eriq@comp:~/code/psl-examples/simple-acquaintances/cli$ ./run.sh -D runtimestats.collect=true
 Running PSL Inference
 0    [main] INFO  org.linqs.psl.cli.Launcher  - Running PSL CLI Version 2.2.0-SNAPSHOT-9335e9a
 ... < Omitted in the changelog for brevity > ...
@@ -316,10 +313,10 @@ Running PSL Inference
 3437 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - Max Memory (bytes)   -- Min:   1832386560, Max:   1832386560, Mean:   1832386560, Count:           14
 3437 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - IO Reads (bytes)     -- Min:            0, Max:            0, Mean:            0, Count:            0, Total:            0
 3437 [Thread-1] INFO  org.linqs.psl.util.RuntimeStats  - IO Writes (bytes)    -- Min:            0, Max:            0, Mean:            0, Count:            0, Total:            0
-eriq@MrMime:~/code/psl-examples/simple-acquaintances/cli$
+eriq@comp:~/code/psl-examples/simple-acquaintances/cli$
 ```
 
-## Miscellanea
+## **Miscellanea**
 
 ### Simple Class Names
 Commit: [*00b60321*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
@@ -356,7 +353,7 @@ For example, you can use the following command to use GPP in the CLI:
 ./run.sh --learn GaussianProcessPrior -D weightlearning.evaluator=DiscreteEvaluator
 ```
 
-GPP has four main configuration options that can be tuned for better results:
+GPP has four main configuration options that the user should be aware of:
 * `weightlearning.evaluator`  
 Domain: Any [Evaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/Evaluator.html)  
 Default: [ContinuousEvaluator](https://psl.linqs.org/api/2.2.0/org/linqs/psl/evaluation/statistics/ContinuousEvaluator.html)  
@@ -387,7 +384,7 @@ A smaller value would imply that weights are very distinct and related, hence re
 ### Made Data Loading Errors More Clear
 Commit: [*1e889f49*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
 
-File paths were added to several data loading errors in hopes of making them more clear.
+File paths were added to several data loading errors to make them more clear.
 
 ### Removed Date ConstantType
 Commit: [*df5e1b64*](https://github.com/linqs/psl/commit/df5e1b641d5274dd590bc2a917259a9e38bed464)
